# AdventOfCode2023

./: .gitignore  Cargo.toml  README.md
01/: day_1.rs  part_1.rs  part_2.rs  test.txt
02/: part_1.rs  part_2.rs
03/: 1.rs  2.rs
04/: 1.rs  2.rs
05/: 1.rs  2.rs  Cargo.toml
benchmarks/: benchmarks.rs
src/: bin.rs
src/days/: day1.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
